objects/Health_Information__c.object
<CustomObject>
    <description>Orphan Health check Information</description>
    <fields>
        <fullName>DMS_SponsoreeHealth_Id__c</fullName>
        <externalId>true</externalId>
        <label>DMS SponsoreeHealth Id</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dental_Condition_Status__c</fullName>
        <label>Dental Condition Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Health_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Health_Status__c</fullName>
        <label>General Health Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Health_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hearing_Condition_Status__c</fullName>
        <label>Hearing Condition  Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Health_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height_MOU__c</fullName>
        <label>Height MOU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meters</fullName>
                    <default>true</default>
                    <label>Meters</label>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Inch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Orphan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orphan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Orphan</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Health Informations</relationshipLabel>
        <relationshipName>Health_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Orphan_Visit__c</referenceTo>
        <relationshipLabel>Health Informations</relationshipLabel>
        <relationshipName>Health_Informations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight_MOU__c</fullName>
        <label>Weight MOU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KG</fullName>
                    <default>true</default>
                    <label>KG</label>
                </value>
                <value>
                    <fullName>Lbs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Health Information</label>
    <nameField>
        <displayFormat>HI-{00000}</displayFormat>
        <label>Health Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>